Changed List<T> to Page<T>, added comments